Fixed #me spacings a little

--- a/style.scss
+++ b/style.scss
@@ -1039,6 +1039,7 @@ body {
     }
 
     .footer {
+      margin-top:50px;
       a {
         display: block;
       }
